# repro1

./: Cargo.toml
src/: main.rs
